src/Components/About/About.css
.about-container {
  background-color: #f7f7f7;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100vh;
  object-fit: contain;
}

.group {
  padding-top: 3em;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.main_img {
  width: 180px;
  height: auto;
  padding-bottom: 2em;
}

.about-item-2 > h2 {
  font-size: 40px;
  padding: 0em 11rem 1rem 11rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

.about-item-2 > p {
  font-size: 26px;
  line-height: 1.6;
  padding: 0em 11rem 2rem 11rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

@media (max-width: 900px) {
  .about-container {
    background-color: #f7f7f7;
    padding: 5em 4em 5em 4em;
  }

  .about-item-1 > img {
    padding-right: 0em;
  }

  .group {
    flex-direction: column;
  }
  .about-item-1 {
    display: flex;
    justify-content: center;
    padding-bottom: 1.5em;
  }
}

@media only screen and (max-width: 500px) {
  .about-container {
    padding: 3em 2.5em 3em 2.5em;
    display: flex;
    flex-flow: column;
  }

  .about-container > h1 {
    font-size: 40px;
  }

  .about-item-2 > h2 {
    font-size: 25px;
    padding: 0em 0rem 0rem 0rem;
  }
  .about-item-2 > p {
    font-size: 20px;
    line-height: 1.6;
    padding: 0em 0rem 0rem 0rem;
  }
}

